css/style.css
/* ... */
ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: inherit;
    display: inline-block;
}

img {
    display: block;
    width: 100%;
}

button {
    display: inline-block;
    color: inherit;
    border: none;
    background: none;
    cursor: pointer;
}

/* utilities */

.visibility {
    display: block;
}

/* flex */
.d-flex {
    display: flex;
}

.flex-wrap {
    flex-wrap: wrap;
}

.flex-col {
    flex-direction: column;
}

.flex-row-reverse {
    flex-direction: row-reverse;
}

.content-between {
    justify-content: space-between;
}

.content-center {
    justify-content: center;
}

.items-center {
    align-items: center;
}

/* text format */
.text-light {
    color: var(--color-light);
}

.text-center {
    text-align: center;
}

.uppercase {
    text-transform: uppercase;
}

.text-sm {
    font-size: var(--text-sm);
}

.text-smaller {
    font-size: var(--text-smaller);
}

.text-semibold {
    font-weight: 600;
}

.text-bold {
    font-weight: 800;
}

/* spacers */
.p-inline-md {
    padding-inline: var(--p-inline-md);
}

.p-inline-sm {
    padding-inline: var(--p-inline-sm);
}

.p-block-md {
    padding-block: var(--p-block-md);
}

.p-block-sm {
    padding-block: var(--p-block-sm);
}

.p-block-xs {
    padding-block: var(--p-block-xs);
}

.gap-lg {
    gap: var(--gap-lg);
}

.gap-md {
    gap: var(--gap-md);
}

.gap-sm {
    gap: var(--gap-sm);
}

.gap-xs {
    gap: var(--gap-xs);
}

/* components, generals */
.btn {
    border: 1px solid var(--color-light);
    padding: 13px 39px;
    border-radius: 30px;
    color: var(--color-light);
}


/* body */
body {
    font-family: "Montserrat", sans-serif;
    font-weight: normal;
    font-style: normal;
    color: var(--color-lightgrey);
}

/* wrapper */
.wrapper {
    height: 100dvh;
}

/* upper content */
.upper-content {
    max-height: calc(100% - var(--height-footer));
    overflow: hidden;
    /*consigliato*/
    flex: 1 1 auto;
}

/*********************************************************

SIDEBAR 

***********************************************************/
#sidebar {
    background: var(--color-black);
    flex: 0 0 200px;
    padding-top: 15px;
    padding-bottom: 5px;
    position: relative;
    /* overflow: auto; */
}

#sidebar .logo {
    width: 80%;
}

.logo-small {
    display: none;
}

#sidebar>*:not(.logo) {
    width: 100%;
}

/* sidebar nav */
.sidebar-nav li {
    width: 100%;
    display: flex;
    align-items: center;
    gap: var(--gap-xs);
    position: relative;
}

.sidebar-nav li:first-child::before {
    position: absolute;
    content: "";
    display: block;
    height: 100%;
    border: 2.3px solid var(--color-highlight);
    border-radius: 30px;
    top: 0;
    left: calc(0px - var(--p-inline-sm));
}

.sidebar-nav .image {
    width: 1.5rem;
}

/* sidebar section playlist */

.playlist .crea {
    font-size: 2.3rem;
}

.playlist ul {
    height: 20em;
    padding-inline: var(--p-inline-sm);
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
    overflow: auto;
    background: rgba(255, 255, 255, 0.05);
    box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.1);
}

.playlist ul li {
    padding-block: var(--p-block-sm);
}

/* sidebar profile-content */
.profile-content {
    position: absolute;
    left: 0;
    bottom: 5px;
}

.profile-content>*:not(hr) {
    margin-left: 10px;
}

.profile-content .install {
    position: relative;
}


.profile-content .image {
    width: 1.5rem;
}

.profile-content .profile .image {
    background: var(--color-lightgrey);
    border-radius: 50%;
    overflow: hidden;
}

/* sidebar hover */
.sidebar-nav li:hover,
.playlist>div:nth-child(2):hover,
.playlist ul li:hover,
.profile-content>:not(hr):hover {
    cursor: pointer;
    color: var(--color-light);
}

/* upper content MAIN */
main {
    flex: 1 1 auto;
    /* overflow: auto; */
    /*per scrollbar anche header -> modificare position header in fixed in alto*/
}

/*********************************************************

MAIN HEADER 

***********************************************************/
main .header {
    background: #0c1018;
    height: var(--height-header);
    position: relative;
}

/* posizione bottone header */
.header .btn {
    position: absolute;
    right: 35px;
    top: 50%;
    transform: translateY(-50%);
}

.header .btn:hover {
    scale: 105%;
}

/*********************************************************

MAIN CONTENT 

***********************************************************/

/* main content ha un altezza fissata calcolata come 
spazio rimanente nella schermata tolti header e footer*/
/* all'overflow del suo contenuto compare la barra di scorrimento */
main .main-content {
    background: var(--color-dark);
    height: calc(100dvh - (var(--height-header) + var(--height-footer)));
    overflow-y: auto;
}

/* MAIN-CONTENT NAV */
.main-content .main-nav ul {
    row-gap: 30px;
}

.main-content .main-nav li {
    position: relative;
}

.main-content .main-nav li:hover {
    color: var(--color-light);
}

.main-content .main-nav li a {
    padding: 5px 10px;
}

/* solo il primo child della navbar */
.main-content .main-nav li:first-child::after {
    position: absolute;
    display: block;
    content: "";
    width: 30%;
    border: 2px solid var(--color-highlight);
    left: 50%;
    transform: translateX(-50%);
}

/* MAIN-CONTENT SECTIONS */
.main-content .category-title {
    margin-top: 35px;
    margin-bottom: 25px;
}

.main-content .category-title h2,
.main-content .playlist-title {
    color: var(--color-light);
}

.main-content .category-title h5 {
    font-weight: 600;
}

/* copertina card */
.card-list .card-image {
    position: relative;
}
/* ... */

